@@ -85,6 +85,7 @@
 # SIMTA_SMTP_MAIL_FROM - message's From
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
+# SIMTA_CHECKSUM_SIZE - number of bytes of data read for a message's checksum
 #
 # The content filter can return one of four integer values:
 # 0 - MESSAGE_ACCEPT
